# KRDev

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: KRDevCompilerOption.cmake  KRDevGitInfo.cmake  KRDevHelper.cmake
packaging/: CMakeLists.txt  ProjectConfig.cmake.in
tests/: CMakeLists.txt
tests/get_git_info/: CMakeLists.txt
tests/set_compile_option/: CMakeLists.txt  c_option.c  cxx_option.cpp  test_main.cpp
tests/set_development_options/: CMakeLists.txt  c_file.c  c_file.h  cxx_file.cpp  cxx_file.hpp  test_main.cpp
